Search API Autocomplete 1.5 (2017-07-18):
-----------------------------------------
- #2772143 by drunken monkey: Fixed missing language restriction on search
  pages.
- #1983442 by Rob230, drunken monkey: Fixed problems with multiple autocomplete
  fields in one view.
- #2572973 by drunken monkey: Fixed missing default value for suggester in new
  settings.
- #2564965 by drunken monkey: Fixed escaping of "Override used fields" options.

Search API Autocomplete 1.4 (2015-08-29):
-----------------------------------------
- #2503607 by drunken monkey: Added support for custom autocomplete scripts.
- #2458629 by sherakama, drunken monkey, mgifford: Added ARIA roles for search
  field and parent wrapper.
- #2503613 by drunken monkey: Fixed issues with multiple search fields on the
  same page.
- #2493919 by sg88, drunken monkey: Added the option to disable auto-submit.
- #2502937 by drunken monkey: Added flexibility for returned suggestions.
- #2503593 by drunken monkey: Added a hidden variable for changing the
  autocomplete delay.
- #2475435 by drunken monkey: Added support for switching the autocomplete
  implementation.

Search API Autocomplete 1.3 (2015-08-19):
-----------------------------------------
- Fixed escaping of search keywords returned in suggestions HTML.

Search API Autocomplete 1.2 (2015-06-03):
-----------------------------------------
- #2335701 by marvil07, drunken monkey: Added an alter hook for the detected
  fulltext fields in views.
- #2415057 by das-peter: Added a JS select event when auto-completing.
- #2345683 by drunken monkey: Fixed error message in admin UI when there are no
  (recognized) searches.
- #2368795 by theo_: Fixed Javascript error when overriding autocomplete.
- #2352567 by das-peter, drunken monkey: Fixed CTools incompatibility of JS
  submit handler.
- #2334563 by Begun, drunken monkey, marvil07: Added an advanced option to
  change the jQuery button selector.