@@ -6,9 +6,8 @@ package = Search
 
 files[] = search_api_db.test
 files[] = service.inc
-; Information added by Drupal.org packaging script on 2017-02-23
-version = "7.x-1.6"
+; Information added by Drupal.org packaging script on 2018-09-17
+version = "7.x-1.7"
 core = "7.x"
 project = "search_api_db"
-datestamp = "1487844786"
-
+datestamp = "1537173484"
