@@ -1,3 +1,14 @@
+Search API Database Search 1.7 (2018-09-17):
+--------------------------------------------
+- #2982443 by KarlShea, drunken monkey: Added support for the "(not) between"
+  operators.
+- #2855634 by drunken monkey, SpadXIII, levmyshkin, chris.jichen: Fixed update
+  #7107.
+- #2940278 by james.williams, drunken monkey: Fixed indexing of decimal values
+  as boolean.
+- #2897548 by drunken monkey: Fixed sorting on MySQL 5.7.
+- #2879881 by drunken monkey: Fixed preprocessing of autocomplete keys.
+
 Search API Database Search 1.6 (2017-02-23):
 --------------------------------------------
 - #2840261 by alan-ps, drunken monkey: Fixed usage of outdated hash functions.
